# langfuse-mistral

./: .env.example  .gitignore  PLAN.md  README.md  main.py  package.json  pyproject.toml  requirements.txt
.opencode/skills/expense-claim-generator/: SKILL.md  policy.default.json
.opencode/skills/expense-claim-generator/scripts/: generate_expense_claim.py
data/fixtures/receipt_001/: claim.json  normalized.json
receipt_recon/: README.md  __init__.py  api.py  claims.py  config.py  dataset.py  decision.py  evaluation.py  frontend_adapter.py  ocr.py  policy.py  schemas.py
receipt_recon/static/: index.html
scripts/: download_cord.py  make_low_confidence_sample.py
src/: start.ts
src/data/: claims.json
src/lib/: langfuse.ts  map-findings.ts  mistral-ocr.test.ts  mistral-ocr.ts  receipt-api.ts  receipt-generator-core.test.ts  receipt-generator-core.ts  receipt-generator.ts
src/receipt_agent/: __init__.py  api.py  checkers.py  claims.py  contracts.py  decision_agent.py  main.py  ocr_agent.py  orchestrator.py  tracing.py
src/routes/: index.tsx
