[project]
name = "receipt-reconciliation"
version = "0.1.0"
description = "Receipt Reconciliation Mystery — Mistral OCR + Langfuse tracing over CORD v2"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.10.0",
    "langfuse>=3.0.0",
    "datasets>=3.0.0",
    "huggingface-hub>=1.24.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100
target-version = "py39"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["receipt_recon", "src/receipt_agent"]
